security: fixed vulnerable scripts and added beta electron wrapper

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!-- SEO -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MathFlare - Home</title>
     <meta name="title" content="MathFlare">
@@ -109,8 +110,8 @@
             </div>
             <div class="col-md p-2 p-md-5">
                 <h2 class="text-warning fw-normal">Support the Open Source Project</h2>
-                <p class="lead">If you would like to help us  continue developing MathFlare, please consider financially supporting us through <a
-                        href="https://buymeacoffee.com/mathflare" target="_blank" rel="noopener"
+                <p class="lead">If you would like to help us continue developing MathFlare, please consider financially
+                    supporting us through <a href="https://buymeacoffee.com/mathflare" target="_blank" rel="noopener"
                         class="donate-link">buymeacoffee</a>, <a href="https://ko-fi.com/mathflare" target="_blank"
                         rel="noopener" class="donate-link">Ko-fi</a>, <a href="https://patreon.com/mathflare"
                         target="_blank" rel="noopener" class="donate-link">Patreon</a> or <a
